# citation-function-corpus-lingustics

./: Generate Collocates and Keywords on Citation Context Corpus.ipynb  LICENSE  README.md  analyze_collocates.py  citations_sample.csv  generate_collocates.py  pyproject.toml
.ipynb_checkpoints/: Analyze Collocates-checkpoint.ipynb
data/: contradicting_0_nouns.csv  contradicting_0_verbs.csv  contradicting_1_nouns.csv  contradicting_1_verbs.csv  contradicting_2_nouns.csv  contradicting_2_verbs.csv  contradicting_3_nouns.csv  contradicting_3_verbs.csv  contradicting_4_bigrams.csv  contradicting_4_nouns.csv  contradicting_4_verbs.csv  contradicting_5_nouns.csv  contradicting_5_verbs.csv  contradicting_6_nouns.csv  contradicting_6_verbs.csv  contradicting_7_nouns.csv  contradicting_7_verbs.csv  contradicting_8_nouns.csv  contradicting_8_verbs.csv  contradicting_9_bigrams.csv  contradicting_9_nouns.csv  contradicting_9_verbs.csv  contradicting_metadata.csv  mentioning_0_nouns.csv  mentioning_0_verbs.csv  mentioning_10_nouns.csv  mentioning_10_verbs.csv  mentioning_1_nouns.csv  mentioning_1_verbs.csv  mentioning_2_nouns.csv  mentioning_2_verbs.csv  mentioning_3_nouns.csv  mentioning_3_verbs.csv  mentioning_4_nouns.csv  mentioning_4_verbs.csv  mentioning_5_nouns.csv  mentioning_5_verbs.csv  mentioning_6_nouns.csv  mentioning_6_verbs.csv  mentioning_7_nouns.csv  (+29 more)
